--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/IMG-20230721-WA0007.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG-20230721-WA0007.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>vetrivel.S</h1>
             <p>MASTER'S ON BCA</p>
         </div>
